# ClassWork

./: CMakeLists.txt  ConsoleApplication1.sln
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Dog.cpp  Dog.h  Pet.cpp  Pet.h  PetCenter.cpp  PetCenter.h
Новая папка (2)/: CMakeLists.txt  main.cpp
Новая папка (3)/: CMakeLists.txt  main.cpp
Новая папка (4)/: CMakeLists.txt  main.cpp
Новая папка (5)/: CMakeLists.txt  main.cpp
